ui-ux: Fix 'Menu' responsive issue on Small Screens

--- a/css/app.sass
+++ b/css/app.sass
@@ -153,7 +153,7 @@ header
 	position: fixed
 	top: 0
 	width: 100%
-	background: $color-white
+	background: #fefefe
 	z-index: 999
 	box-shadow: 0px 1px 8px 1px #eaeaea
 
@@ -177,6 +177,7 @@ header
 		.menu-links
 			width: 100%
 			position: fixed
+			background: #fefefe
 			top: 86px
 			left: -100%
 			transition: all 300ms ease
@@ -198,7 +199,7 @@ header
 		@media all and (min-width: 667px)
 			display: flex
 			.logo
-				flex: 1
+				flex: 0.5
 				text-align: left
 
 			.toggle-menu
